# ket

./: .clang-format  .clang-tidy  .gitignore  .prettierignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  catalog.md  ket_coding_agent_brief.md  package-lock.json  package.json  progress.md
.github/workflows/: ci.yml
cmake/: KetModule.cmake
docs/: module_api_catalog.md  module_lifecycle.md  site_reference_design.md  style.md  testing.md
docs/proposals/: module_api_proposal.md
docs/site_src/: categories.json  site.json
docs/site_src/modules/: ascii.json  bcd.json  bits.json  build_config.json  byte_reader.json  byte_view.json  byte_writer.json  bytes.json  cache.json  cli.json  color.json  concurrency.json  container.json  contract.json  date.json  deadline.json  endian.json  (+30 more)
modules/ascii/: ket_ascii.cpp  ket_ascii.h  ket_ascii_test.cpp
modules/bcd/: ket_bcd.cpp  ket_bcd.h  ket_bcd_test.cpp
modules/bits/: ket_bits.h  ket_bits_test.cpp
modules/build_config/: ket_build_config.h  ket_build_config_cxx11_check.cpp  ket_build_config_cxx14_check.cpp  ket_build_config_cxx20_check.cpp  ket_build_config_cxx20_standard_first_check.cpp  ket_build_config_cxx23_check.cpp  ket_build_config_standard_first_test.cpp  ket_build_config_test.cpp
modules/byte_reader/: ket_byte_reader.cpp  ket_byte_reader.h  ket_byte_reader_test.cpp
modules/byte_view/: ket_byte_view.h  ket_byte_view_test.cpp
modules/byte_writer/: ket_byte_writer.cpp  ket_byte_writer.h  ket_byte_writer_test.cpp
modules/bytes/: ket_bytes.h  ket_bytes_test.cpp
modules/cache/: ket_cache.h  ket_cache_cxx11_check.cpp  ket_cache_test.cpp
modules/cli/: ket_cli.h  ket_cli_test.cpp
modules/color/: ket_color.h  ket_color_cxx11_check.cpp  ket_color_test.cpp
modules/concurrency/: ket_concurrency.h  ket_concurrency_cxx11_check.cpp  ket_concurrency_test.cpp
modules/container/: ket_container.h  ket_container_test.cpp
modules/contract/: ket_contract.h  ket_contract_cxx11_check.cpp  ket_contract_test.cpp
modules/date/: ket_date.h  ket_date_compile_check.cpp  ket_date_test.cpp
modules/deadline/: ket_deadline.cpp  ket_deadline.h  ket_deadline_test.cpp
modules/endian/: ket_endian.cpp  ket_endian.h  ket_endian_test.cpp
modules/enums/: ket_enums.h  ket_enums_test.cpp
modules/file/: ket_file.cpp  ket_file.h  ket_file_test.cpp
modules/function/: ket_function.h  ket_function_test.cpp
modules/hex/: ket_hex.cpp  ket_hex.h  ket_hex_test.cpp
modules/io_stream/: ket_io_stream.cpp  ket_io_stream.h  ket_io_stream_cxx11_check.cpp  ket_io_stream_test.cpp
modules/ipv4/: ket_ipv4.cpp  ket_ipv4.h  ket_ipv4_test.cpp
modules/lang/: ket_lang.h  ket_lang_cxx11_check.cpp  ket_lang_test.cpp
modules/mac/: ket_mac.cpp  ket_mac.h  ket_mac_test.cpp
modules/math/: ket_math.h  ket_math_cxx11_check.cpp  ket_math_test.cpp
modules/memory/: ket_memory.h  ket_memory_cxx11_check.cpp  ket_memory_test.cpp
modules/meta/: ket_meta.h  ket_meta_cxx11_check.cpp  ket_meta_test.cpp
modules/numeric/: ket_numeric.h  ket_numeric_cxx11_check.cpp  ket_numeric_test.cpp
modules/object/: ket_object.h  ket_object_cxx11_check.cpp  ket_object_test.cpp
modules/optional/: ket_optional.h  ket_optional_test.cpp
modules/parse/: ket_parse.h  ket_parse_test.cpp
modules/percent/: ket_percent.h  ket_percent_cxx11_check.cpp  ket_percent_test.cpp
modules/platform/: ket_platform.cpp  ket_platform.h  ket_platform_test.cpp
modules/pointer/: ket_pointer.h  ket_pointer_cxx11_check.cpp  ket_pointer_test.cpp
modules/port/: ket_port.cpp  ket_port.h  ket_port_test.cpp
modules/ranges/: ket_ranges.h  ket_ranges_cxx11_check.cpp  ket_ranges_test.cpp
modules/scope/: ket_scope.h  ket_scope_cxx11_check.cpp  ket_scope_test.cpp
modules/state/: ket_state.h  ket_state_test.cpp
modules/string/: ket_string.h  ket_string_test.cpp
modules/testing/: ket_testing.cpp  ket_testing.h  ket_testing_test.cpp
modules/tlv/: ket_tlv.cpp  ket_tlv.h  ket_tlv_cxx11_check.cpp  ket_tlv_test.cpp
modules/tuple/: ket_tuple.h  ket_tuple_test.cpp
modules/utf8/: ket_utf8.cpp  ket_utf8.h  ket_utf8_test.cpp
modules/uuid/: ket_uuid.cpp  ket_uuid.h  ket_uuid_test.cpp
modules/variant/: ket_variant.h  ket_variant_test.cpp
modules/version/: ket_version.cpp  ket_version.h  ket_version_test.cpp
site/: diagrams.html  index.html  search.html
site/api/: index.html
site/categories/: binary.html  boundary.html  data.html  diagnostic.html  flow.html  index.html  language.html  text.html  value.html
site/modules/: ascii.html  bcd.html  bits.html  build_config.html  byte_reader.html  byte_view.html  byte_writer.html  bytes.html  cache.html  cli.html  color.html  concurrency.html  container.html  contract.html  date.html  deadline.html  endian.html  enums.html  file.html  function.html  hex.html  index.html  io_stream.html  ipv4.html  lang.html  mac.html  math.html  memory.html  meta.html  numeric.html  object.html  optional.html  parse.html  percent.html  platform.html  pointer.html  port.html  ranges.html  scope.html  state.html  (+8 more)
site/use-cases/: binary-io.html  cli-config.html  diagnostics-testing.html  index.html  protocol-payload.html  raii-cleanup.html  template-type.html  text-processing.html  value-validation.html
tests/: ket_bits_cxx11_check.cpp  ket_byte_view_cxx11_check.cpp  ket_color_cxx11_check.cpp  ket_container_cxx11_check.cpp  ket_repository_smoke_test.cpp  ket_wire_factory_positive_check.cpp  ket_wire_factory_reject_bool_check.fail  ket_wire_factory_reject_char_check.fail  ket_wire_factory_reject_signed_swap_check.fail  ket_wire_factory_reject_unsigned_swap_check.fail
tools/: check_conventions.py  check_conventions_test.py  check_cppcheck.py  check_format.py  check_iwyu.py  check_layout.py  check_layout_test.py  check_python.py  check_repository.py  check_site.py  check_tidy.py  expect_compile_failure.py  expect_compile_failure_test.py  format.py  generate_site.py  ket_tooling.py  site_reference.py  site_reference_assets.py  site_reference_check.py  site_reference_html.py  site_reference_model.py  site_reference_render.py  site_reference_test.py
(+8 files in other folders)
